--- a/journal.html
+++ b/journal.html
@@ -15,9 +15,12 @@
             <span class="glyphicon glyphicon-cog"></span>
           </a>
           <div class="settingToggle">
-            <button type="button" class="btn btn-default btn-sm backToHome">
-                <span class="glyphicon glyphicon-home"></span> Home
-              </button>
+            <a href="index.html">
+                <button type="button" class="btn btn-default btn-sm backToHome">
+                    <span class="glyphicon glyphicon-home"></span> Home
+                  </button>
+            </a>
+            
               <div class="changeTheme">
                 <h2>Change Theme?</h2>
                 <select name="identityDropdown" id="theme2">
